--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -12,6 +12,7 @@
   </style>
 </head>
 <body>
+<p class="p1">&lt;html&gt;&lt;head&gt;&lt;title&gt;Terms of Service - SatireStream Media LLC&lt;/title&gt;&lt;/head&gt;&lt;body&gt;&lt;pre&gt;</p>
 <p class="p1">Terms of Service for SatireStream Media LLC</p>
 <p class="p1">Effective Date: December 14, 2025</p>
 <p class="p2"><br></p>
@@ -50,5 +51,6 @@
 <p class="p1">- Questions? Email admin@satirestream.media.</p>
 <p class="p2"><br></p>
 <p class="p1">Last updated: December 14, 2025</p>
+<p class="p1">&lt;/pre&gt;&lt;/body&gt;&lt;/html&gt;</p>
 </body>
 </html>
