--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+  <title>Privacy Policy - SatireStream Media LLC</title>
+  <meta name="tiktok-verification" content="UNIQUE_CODE_FOR_WEBSITE">
+  <meta name="tiktok-verification" content="UNIQUE_CODE_FOR_PRIVACY">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title></title>
